syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";
import "CodexType.proto";

message CodexTypeData {
	CodexType type = 1;
	repeated uint32 codex_id_list = 2;
	repeated bool have_viewed_list = 3;
	map<uint32, uint32> weapon_max_promote_level_map = 4;
}
